<resources>
    <string name="app_name">즐거운방학</string>
    <string name="logoscreendesc">This is logoscreen. full screen img. after 1.5 seconds fadeout</string>
    <string name="startscreendesc">This is startscreen. full screen img. when touch, fadeout</string>
    <string name="nodesc">No Desc</string>
    <string name="stage1_btn_desc">Stage1_select_btn</string>
    <string name="stage2_btn_desc">Stage2_select_btn</string>
    <string name="stage_lock_btn_desc">Stage_lock_select_btn</string>
    <string name="france_guide">저희가 마지막으로 \n갈 나라는 프랑스 입니다.</string>
    <string name="stage_1_popup_1_question_1">이 중에 어떤 물건들이 왼쪽 오른쪽이 같을까요?\n왼쪽과 오른쪽이 같은 것을 모두 찾아서 드래그 해 주세요.</string>
    <string name="stage_1_popup_2_question_1">왼쪽 오른쪽이 같은 물건 외에 위 아래가 같은 것도 찾아보세요. 어떤 것이 같을까요?</string>
    <string name="stage_1_popup_3_question_1">서로 선대칭이 되게 선을 그어주세요.</string>
    <string name="stage_1_popup_4_question_1">거울에 다양한 사물과 도형을 드래그 해서 확인해보세요.</string>
    <string name="answer">정답</string>
    <string name="qrquesiton_description">선대칭 도형이나\n선대칭의 위치에 있는\n도형을 찾는 문제입니다.\n카메라가 실행되면,\n선대칭 도형이나\n선대칭의 위치에 있는 도형을\n찍어보세요.</string>
    <string name="stage1_dialog_1">와~♪\n방학이다~</string>
    <string name="stage1_1_dialog_1">우리 방학도 했는데,\n 엄마 아빠랑 놀이공원에 가자~</string>
    <string name="stage1_1_character_1">family</string>
    <string name="stage1_1_dialog_2">와 신난다~~</string>
    <string name="stage1_1_character_2">kid</string>
    <string name="stage1_1_dialog_3">꿈과 환상의 나라\n 네보랜드에 어서오세요~</string>
    <string name="stage1_1_character_3">girl</string>
    <string name="stage1_1_dialog_4">오늘은 특별히 즐거운 방학 이벤트로\n뽑기를 하고 있으니 해보세요~</string>
    <string name="stage1_1_character_4">girl</string>
    <string name="stage1_1_dialog_5">우와 엄마 아빠 \n우리 저거 한번 해봐요!!!</string>
    <string name="stage1_1_character_5">kid</string>
    <string name="stage1_1_dialog_6">none</string>
    <string name="stage1_1_character_6">popup</string>
	<string name="stage1_1_dialog_7">우와~ 정말 축하드려요!!\n세계여행을 할 수 있는\n1등에 당첨되셨네요~~</string>
	<string name="stage1_1_character_7">girl</string>
	<string name="stage1_1_dialog_8">아니 이게 꿈이야 생시야</string>
	<string name="stage1_1_character_8">family</string>
	<string name="stage1_1_dialog_9">정말 즐거운 방학이 되겠네요.\n다시 한번 정말 축하드려요~</string>
	<string name="stage1_1_character_9">girl</string>
	<string name="stage1_1_dialog_10">none</string>
    <string name="stage1_1_character_10">next</string>
    <string name="stage1_india_dialog_1">우리가 공짜로 여행을 오다니 믿기지가 않아.</string>
    <string name="stage1_india_characte_1">family</string>
    <string name="stage1_india_dialog_2">이게 모두 우리 철수 덕분이야!!</string>
    <string name="stage1_india_characte_2">family</string>
    <string name="stage1_india_dialog_3">와 너무 즐거워요~\n이렇게 행복한 방학은 처음이에요.</string>
    <string name="stage1_india_characte_3">kid</string>
    <string name="stage1_india_dialog_4">그나저나 우리 가이드는 왜 안보이지?</string>
    <string name="stage1_india_characte_4">family</string>
    <string name="stage1_india_dialog_5">안녕하세요?어서오세요.\n여러분의 여행가이드 봄바입니다.</string>
    <string name="stage1_india_characte_5">guide</string>
    <string name="stage1_india_dialog_6">여러분은 저와 함께 인도,그리스,프랑스를\n여행하게 될겁니다.\n앞으로 잘 부탁드립니다.</string>
    <string name="stage1_india_characte_6">guide</string>
    <string name="stage1_india_dialog_7">저희도 잘 부탁드려요~</string>
    <string name="stage1_india_characte_7">family</string>
    <string name="stage1_india_dialog_8">none</string>
    <string name="stage1_india_characte_8">bgchange</string>
    <string name="stage1_india_dialog_9">인도는 정말 매력적인 나라입니다.\n인도는 간디가 탄생한 나라이고\n맛있는 음식들도 많죠.</string>
    <string name="stage1_india_characte_9">guide</string>
    <string name="stage1_india_dialog_10">인도는 세계에서 일곱 번째로 넓으며,\n인구는 세계에서 두번째로 많아요.\n정말 큰 나라에요.</string>
    <string name="stage1_india_characte_10">guide</string>
    <string name="stage1_india_dialog_11">인도 사람들은 힌디어와 영어를 쓰고,\n힌두교를 믿어서 소를 신성하게 여깁니다.</string>
    <string name="stage1_india_characte_11">guide</string>
    <string name="stage1_india_dialog_12">인도에 오면 멋진 불상들과 갠지스강\n그리고 꼭 봐야 할 타지마할이라는 무덤이 있어요.\n정말 아름답지요.</string>
    <string name="stage1_india_characte_12">guide</string>
    <string name="stage1_india_dialog_13">오 정말 기대가 되는군요.\n어서 아름다운 타지마할을 보고싶어요.</string>
    <string name="stage1_india_characte_13">family</string>
    <string name="stage1_india_dialog_14">그럼 우리 타지마할을 보러 갈까요?</string>
    <string name="stage1_india_characte_14">guide</string>
    <string name="stage1_india_dialog_15">none</string>
    <string name="stage1_india_characte_15">bgchange</string>
    <string name="stage1_india_dialog_16">자 타지마할에 도착했습니다.</string>
    <string name="stage1_india_characte_16">guide</string>
    <string name="stage1_india_dialog_17">타지마할은 옛 무굴 제국의 건축물로\n매우 아름답기로 유명하며\n세계문화유산입니다.</string>
    <string name="stage1_india_characte_17">guide</string>
    <string name="stage1_india_dialog_18">타지마할은 황제가 자신의 사랑하는 부인을\n기억하기위해 지은 무덤이에요.\n완성에 총 22년이 걸렸고,\n많은 보석이 사용되었어요.</string>
    <string name="stage1_india_characte_18">guide</string>
    <string name="stage1_india_dialog_19">우와 보석이라니 정말 부자였나봐요.</string>
    <string name="stage1_india_characte_19">kid</string>
    <string name="stage1_india_dialog_20">정말 멋진 건물이네요.\n듣기로는 이 건물의 특징이 있다던데...</string>
    <string name="stage1_india_characte_20">family</string>
    <string name="stage1_india_dialog_21">네. 이 건물은 어느 방향에서 보아도 왼쪽과 오른쪽이\n같다는 특징을 가지고 있어요.</string>
    <string name="stage1_india_characte_21">guide</string>
    <string name="stage1_india_dialog_22">none</string>
    <string name="stage1_india_characte_22">arview</string>
    <string name="stage1_india_dialog_23">재미있게 잘 보셨나요?\n일정이 바쁘니 빨리 다음 나라로 가시죠.\n다음 나라는 그리스입니다.</string>
    <string name="stage1_india_characte_23">guide</string>
    <string name="stage1_india_dialog_24">none</string>
    <string name="stage1_india_characte_24">next</string>
    <string name="stage1_greece_dialog_1">저 그리스가 너무 기대되요.</string>
    <string name="stage1_greece_character_1">kid</string>
    <string name="stage1_greece_dialog_2">왜 그렇게 기대가 되니?</string>
    <string name="stage1_greece_character_2">father</string>
    <string name="stage1_greece_dialog_3">예전에 나 어렸을 적에 봤던\n그리스 로마 신화 만화가 기억나서요.</string>
    <string name="stage1_greece_character_3">kid</string>
    <string name="stage1_greece_dialog_4">맞아 우리 철수 그 만화\n정말 재미있게 봤었지.</string>
    <string name="stage1_greece_character_4">father</string>
    <string name="stage1_greece_dialog_5">거기 나왔던 신화와 신전들을\n직접 볼 수 있다는 것이 너무 신나요.</string>
    <string name="stage1_greece_character_5">kid</string>
    <string name="stage1_greece_dialog_6">승객여러분~\n저희 비행기는 곧 그리스에 도착하게됩니다.\n안전띠를 착용해주세요~</string>
    <string name="stage1_greece_character_6">girl</string>
    <string name="stage1_greece_dialog_7">우리 얼른 가서 재미있게 그리스 구경 하자꾸나.</string>
    <string name="stage1_greece_character_7">father</string>
    <string name="stage1_greece_dialog_8">none</string>
    <string name="stage1_greece_character_8">next</string>
    <string name="stage1_greece2_dialog_1">여러분.\n비행기는 불편하지 않으셨나요?</string>
    <string name="stage1_greece2_character_1">guide</string>
    <string name="stage1_greece2_dialog_2">네 괜찮았어요.\n그나저나 그리스는 어떤나라인가요?</string>
    <string name="stage1_greece2_character_2">family</string>
    <string name="stage1_greece2_dialog_3">그리스는 정말 멋진 나라죠.\n파란 바다와 하얀 집들이 인상적이에요.</string>
    <string name="stage1_greece2_character_3">guide</string>
    <string name="stage1_greece2_dialog_4">그리스는 섬이 참 많고,\n서양 철학의 발생지에요.\n아리스토텔레스도 그리스 출신이에요.</string>
    <string name="stage1_greece2_character_4">guide</string>
    <string name="stage1_greece2_dialog_5">그리스하면 신화가 유명하고, 영화 300의 스파르타도\n민주주의의 대표인 아테네도\n모두 그리스에 있는 곳이랍니다.</string>
    <string name="stage1_greece2_character_5">guide</string>
    <string name="stage1_greece2_dialog_6">그리스에서 빼놓을 수 없는 구경거리는\n바로 그리스 로마신화에 나오는\n신전들이죠.</string>
    <string name="stage1_greece2_character_6">guide</string>
    <string name="stage1_greece2_dialog_7">와 저희 신전 보러가요~~</string>
    <string name="stage1_greece2_character_7">kid</string>
    <string name="stage1_greece2_dialog_8">none</string>
    <string name="stage1_greece2_character_8">bgchange</string>
    <string name="stage1_greece2_dialog_9">여기는  파르테논 신전 입니다\n그리스의 여신 아테나를\n섬기기 위한 신전이죠.</string>
    <string name="stage1_greece2_character_9">guide</string>
    <string name="stage1_greece2_dialog_10">아 저 아테나 알아요.\n예전에 책에서 읽었어요.\n지혜의 여신이죠?</string>
    <string name="stage1_greece2_character_10">kid</string>
    <string name="stage1_greece2_dialog_11">네. 아테나는 지혜의 여신이고,\n그리스의 수도 아테네의\n수호 여신이기도 하죠.</string>
    <string name="stage1_greece2_character_11">guide</string>
    <string name="stage1_greece2_dialog_12">파르테논 신전은 그리스 건축물들 중\n최고로 꼽히여,16년에 걸쳐 만들어졌어요.\n매우 웅장하죠.</string>
    <string name="stage1_greece2_character_12">guide</string>
    <string name="stage1_greece2_dialog_13">굉장히 과학적으로 사람의 착시까지 감안하여\n매우 곧게 보이도록 지어졌지요.</string>
    <string name="stage1_greece2_character_13">guide</string>
    <string name="stage1_greece2_dialog_14">대단하네요~\n옛날 사람들은 어떻게 이런걸\n할 수 있었을까요?</string>
    <string name="stage1_greece2_character_14">family</string>
    <string name="stage1_greece2_dialog_15">그건 그리스가\n수학이 매우 발달했기 때문이에요.</string>
    <string name="stage1_greece2_character_15">guide</string>
    <string name="stage1_greece2_dialog_16">none</string>
    <string name="stage1_greece2_character_16">arview</string>
    <string name="stage1_greece2_dialog_17">아빠 나 이 건물의 특이한 점을 찾았어요.</string>
    <string name="stage1_greece2_character_17">kidandfather_kid</string>
    <string name="stage1_greece2_dialog_18">그게 뭐니?</string>
    <string name="stage1_greece2_character_18">kidandfather_father</string>
    <string name="stage1_greece2_dialog_19">이 건물은 인도에서 본 타지마할 같이\n왼쪽과 오른쪽이 똑같아요.</string>
    <string name="stage1_greece2_character_19">kidandfather_kid</string>
    <string name="stage1_greece2_dialog_20">오 정말 그렇구나!!!\n이런걸 알아내다니 정말 똑똑해~</string>
    <string name="stage1_greece2_character_20">kidandfather_father</string>
    <string name="stage1_greece2_dialog_21">none</string>
    <string name="stage1_greece2_character_21">next</string>
    <string name="stage1_france_dialog_1">어머!!프랑스에 오니까 가방이 너무 싸요.\n한국에선 이거 엄청 비싼데~~</string>
    <string name="stage1_france_character_1">mother</string>
    <string name="stage1_france_dialog_2">나는 와인이 많아서 좋아~~허허허</string>
    <string name="stage1_france_character_2">father</string>
    <string name="stage1_france_dialog_3">쇼핑은 즐겁게 하셨나요?\n이제 저녁이되어가는데\n숙소 가시기 전에  한 군데 더 들러보시죠?</string>
    <string name="stage1_france_character_3">guide</string>
    <string name="stage1_france_dialog_4">어디를 또 보여주실껀가요?</string>
    <string name="stage1_france_character_4">mother</string>
    <string name="stage1_france_dialog_5">프랑스하면 파리!\n파리하면 에펠탑이죠.\n에펠탑의 야경은 정말 멋지답니다.</string>
    <string name="stage1_france_character_5">guide</string>
    <string name="stage1_france_dialog_6">좋아요!!그럼 우리\n에펠탑을 보러 가요!!</string>
    <string name="stage1_france_character_6">father</string>
    <string name="stage1_france_dialog_7">none</string>
    <string name="stage1_france_character_7">next</string>
    <string name="stage1_france2_dialog_1">마침 아주 멋진 시간에 도착했군요.\n에펠탑에 불이 모두 켜져있어요.</string>
    <string name="stage1_france2_character_1">guide</string>
    <string name="stage1_france2_dialog_2">불 켜진 에펠탑의 모습이\n너무너무 멋지네요.</string>
    <string name="stage1_france2_character_2">family</string>
    <string name="stage1_france2_dialog_3">에펠탑이라는 이름은 이 탑을\n만든 사람의 이름을 따서\n지어졌어요.</string>
    <string name="stage1_france2_character_3">guide</string>
    <string name="stage1_france2_dialog_4">프랑스 혁명 100주년을\n기념하기 위해 지어졌죠.</string>
    <string name="stage1_france2_character_4">guide</string>
    <string name="stage1_france2_dialog_5">복잡한 설계에 의해\n철만으로 지을 수 있었어요.</string>
    <string name="stage1_france2_character_5">guide</string>
    <string name="stage1_france2_dialog_6">하지만 많은 예술가들은\n이 탑이 흉물스럽다고 싫어했어요.</string>
    <string name="stage1_france2_character_6">guide</string>
    <string name="stage1_france2_dialog_7">이렇게 멋진데,\n흉물스럽다니요?</string>
</resources>