<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stage1greecetypetwo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StageOneGreeceActivityTwo" >

    <ImageView
        android:id="@+id/stage1_greece_typeotwo_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nodesc"
        android:scaleType="fitXY"
        android:src="@drawable/airplain" />

    <ImageView
        android:id="@+id/stage1_greece_blackscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nodesc"
        android:scaleType="fitXY"
        android:src="@drawable/blackscreen" />

    <ImageView
        android:id="@+id/stage1_greece_child"
        android:layout_width="300dp"
        android:layout_height="420dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/nodesc"
        android:scaleType="fitXY"
        android:src="@drawable/maincharacter_smile" />

    <LinearLayout
        android:id="@+id/stage1_greece_textbubble1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stage1_greece_child"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/textbubble"
        android:orientation="vertical"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/stage1_greece_textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/stage1_greece_dialog_1"
            android:textColor="#FF000000"
            android:textSize="30sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/stage1_greece_father"
        android:layout_width="300dp"
        android:layout_height="420dp"
        android:layout_marginLeft="800dp"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/nodesc"
        android:scaleType="fitXY"
        android:src="@drawable/father" />

    <LinearLayout
        android:id="@+id/stage1_greece_textbubble2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stage1_greece_father"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/textbubble"
        android:orientation="vertical"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/stage1_greece_textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/stage1_greece_dialog_2"
            android:textColor="#FF000000"
            android:textSize="30sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/stage1_greece_guide_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" >

        <ImageView
            android:id="@+id/stage1_greece_airlinegirl"
            android:layout_width="250dp"
            android:layout_height="400dp"
            android:layout_marginLeft="500dp"
            android:layout_marginTop="300dp"
            android:contentDescription="@string/nodesc"
            android:scaleType="fitXY"
            android:src="@drawable/airlinegirl"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/stage1_greece_guide_textbubble1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/stage1_greece_airlinegirl"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/textbubble"
            android:orientation="vertical"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/stage1_greece_guide_textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/stage1_india_dialog_6"
                android:textColor="#FF000000"
                android:textSize="30sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/stage1_greece_typetwo_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1150dp"
        android:layout_marginTop="650dp"
        android:background="@drawable/next_btn"
        android:contentDescription="@string/nodesc" />

</RelativeLayout>