<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stageoneindiatypetwo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StageOneIndiaActivityTypeTwo" >

    <ImageView
        android:id="@+id/stage1_india_typeotwo_bg1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nodesc"
        android:scaleType="fitXY"
        android:src="@drawable/india1" />

    <ImageView
        android:id="@+id/stage1_india_typeotwo_bg2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nodesc"
        android:scaleType="fitXY"
        android:src="@drawable/india2"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/stage1_india_typeotwo_bg3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nodesc"
        android:scaleType="fitXY"
        android:src="@drawable/india3"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/stage1_india_blackscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nodesc"
        android:scaleType="fitXY"
        android:src="@drawable/blackscreen" />

    <ImageView
        android:id="@+id/stage1_india_mainChar_1"
        android:layout_width="580dp"
        android:layout_height="420dp"
        android:layout_marginLeft="600dp"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/nodesc"
        android:scaleType="fitXY"
        android:src="@drawable/family" />

    <LinearLayout
        android:id="@+id/stage1_india_textbubble1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stage1_india_mainChar_1"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/textbubble"
        android:orientation="vertical"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/stage1_india_textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/stage1_india_dialog_1"
            android:textColor="#FF000000"
            android:textSize="30sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/stage1_india_guide_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible" >

        <ImageView
            android:id="@+id/stage1_india_guide_Char"
            android:layout_width="250dp"
            android:layout_height="420dp"
            android:layout_marginTop="250dp"
            android:layout_marginLeft="100dp"
            android:contentDescription="@string/nodesc"
            android:scaleType="fitXY"
            android:src="@drawable/guide" />

        <LinearLayout
            android:id="@+id/stage1_india_guide_textbubble1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/stage1_india_guide_Char"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/textbubble"
            android:orientation="vertical"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/stage1_india_guide_textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/stage1_india_dialog_5"
                android:textColor="#FF000000"
                android:textSize="30sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/stage1_india_textbubble2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/stage1_india_mainChar_1"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/textbubble"
        android:orientation="vertical"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/stage1_india_textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/stage1_india_dialog_3"
            android:textColor="#FF000000"
            android:textSize="30sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/stage1_india_typetwo_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1150dp"
        android:layout_marginTop="650dp"
        android:background="@drawable/next_btn"
        android:contentDescription="@string/nodesc" />

</RelativeLayout>